# game-of-life

./: CMakeLists.txt  game_of_lifeSDL.kdev4  main.cpp
cmake/: FindSDL2_image.cmake
src/: board.cpp  board.h  window.h
